--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,9 @@ build-iPhoneSimulator/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+
+*.env
+!*example*.env
+
+.*_hist*
