--- a/config/engines.yml
+++ b/config/engines.yml
@@ -14,17 +14,17 @@ linguist:
     stable: icalialabs/beluga-linguist
   description: Detects the programming languages used in the analyzed project
   community: true
-ruby:
-  channels:
-    stable: icalialabs/beluga-ruby
-  description: Static analysis tool which detects features of ruby projects, including rails, etc.
-  community: false
-  upgrade_languages:
-    - Ruby
-  depends_on:
-    - linguist
-dotnet:
-  channels:
-    stable: icalialabs/beluga-dotnet
-  description: Static analysis tool which detects features of dotnet projects, including mono, etc.
-  community: false
+# ruby:
+#   channels:
+#     stable: icalialabs/beluga-ruby
+#   description: Static analysis tool which detects features of ruby projects, including rails, etc.
+#   community: false
+#   upgrade_languages:
+#     - Ruby
+#   depends_on:
+#     - linguist
+# dotnet:
+#   channels:
+#     stable: icalialabs/beluga-dotnet
+#   description: Static analysis tool which detects features of dotnet projects, including mono, etc.
+#   community: false
