--- a/config/engines.yml
+++ b/config/engines.yml
@@ -11,18 +11,19 @@
 #
 linguist:
   channels:
-    stable: icalialabs/beluga-linguist
+    stable: icalialabs/belugas-linguist
   description: Detects the programming languages used in the analyzed project
   community: true
-# ruby:
-#   channels:
-#     stable: icalialabs/beluga-ruby
-#   description: Static analysis tool which detects features of ruby projects, including rails, etc.
-#   community: false
-#   upgrade_languages:
-#     - Ruby
-#   depends_on:
-#     - linguist
+
+ruby:
+  channels:
+    stable: icalialabs/belugas-ruby:latest
+  description: Static analysis tool which detects features of ruby projects, including rails, etc.
+  community: false
+  run_if:
+    linguist:
+      - Ruby
+
 # dotnet:
 #   channels:
 #     stable: icalialabs/beluga-dotnet
