--- a/config/engines.yml
+++ b/config/engines.yml
@@ -11,13 +11,13 @@
 #
 linguist:
   channels:
-    stable: icalialabs/belugas-linguist:latest
+    stable: whalesil/belugas-linguist:latest
   description: Detects the programming languages used in the analyzed project
   community: true
 
 ruby:
   channels:
-    stable: icalialabs/belugas-ruby:latest
+    stable: whalesil/belugas-ruby:latest
   description: Static analysis tool which detects features of ruby projects, including rails, etc.
   community: false
   run_if:
@@ -30,7 +30,7 @@ ruby:
 
 python:
   channels:
-    stable: icalialabs/belugas-python:latest
+    stable: whalesil/belugas-python:latest
   description: Static analysis tool which detects features of python projects, including django, etc.
   community: false
   run_if:
@@ -52,7 +52,7 @@ java:
 
 php:
   channels:
-    stable: icalialabs/belugas-php:latest
+    stable: whalesil/belugas-php:latest
   description: Static analysis tool which detects features of php projects.
   community: false
   run_if:
@@ -63,6 +63,6 @@ php:
 
 # dotnet:
 #   channels:
-#     stable: icalialabs/beluga-dotnet
+#     stable: whalesil/beluga-dotnet
 #   description: Static analysis tool which detects features of dotnet projects, including mono, etc.
 #   community: false
