--- a/config/engines.yml
+++ b/config/engines.yml
@@ -11,13 +11,13 @@
 #
 linguist:
   channels:
-    stable: gueils/belugas-linguist:latest
+    stable: gueils/belugas-linguist
   description: Detects the programming languages used in the analyzed project
   community: true
 
 ruby:
   channels:
-    stable: gueils/belugas-ruby:latest
+    stable: gueils/belugas-ruby
   description: Static analysis tool which detects features of ruby projects, including rails, etc.
   community: false
   run_if:
@@ -30,7 +30,7 @@ ruby:
 
 python:
   channels:
-    stable: gueils/belugas-python:latest
+    stable: gueils/belugas-python
   description: Static analysis tool which detects features of python projects, including django, etc.
   community: false
   run_if:
@@ -41,7 +41,7 @@ python:
 
 java:
   channels:
-    stable: gueils/belugas-java:latest
+    stable: gueils/belugas-java
   description: Static analysis tool which detects features of java projects.
   community: false
   run_if:
@@ -52,7 +52,7 @@ java:
 
 php:
   channels:
-    stable: gueils/belugas-php:latest
+    stable: gueils/belugas-php
   description: Static analysis tool which detects features of php projects.
   community: false
   run_if:
@@ -62,17 +62,11 @@ php:
       - PHP
 node:
   channels:
-    stable: gueils/belugas-node:latest
-  description: Static analysis tool which detects features of node projects.
-  community: false
-
-javascript:
-  channels:
-    stable: gueils/belugas-node:latest
+    stable: gueils/belugas-node
   description: Static analysis tool which detects features of node projects.
   community: false
   run_if:
-    engines::
+    engines:
       - linguist
     features:
       - Javascript
